# securedrop

./: .flake8  .gitignore  Makefile
.circleci/: config.yml
devops/scripts/: boot-strap-venv.sh  shellcheck.sh  yaml-lint.sh
install_files/ansible-base/roles/build-securedrop-app-code-deb-pkg/files/: usr.sbin.apache2
redwood/: Cargo.toml  pyproject.toml  redwood.pyi
redwood/src/: decryption.rs  lib.rs
securedrop/: journalist.py  loaddata.py  models.py  source_user.py  store.py
securedrop/dockerfiles/focal/python3/: Dockerfile
securedrop/journalist_app/: col.py  main.py  utils.py
securedrop/journalist_templates/: col.html
securedrop/requirements/python3/: build-requirements.in  build-requirements.txt
securedrop/source_app/: main.py
securedrop/tests/: conftest.py  test_encryption.py  test_journalist.py  test_source.py
securedrop/tests/functional/: conftest.py
securedrop/tests/utils/: db_helper.py
