[package]
name = "redwood"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "redwood"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
pyo3 = { version = "0.17", features = ["extension-module"] }
sequoia-openpgp = "1.9.0"
thiserror = "1.0.31"

[dev-dependencies]
tempfile = "3.3.0"
